# changed group list; now, click on the whole area to get in a group

--- a/MyApp4/.settings/org.eclipse.wst.common.component
+++ b/MyApp4/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Spring-Hibernate">
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Spring-Hibernate/build/classes"/>
-        <property name="context-root" value="MyApp4"/>
-    </wb-module>
+	<wb-module deploy-name="Spring-Hibernate">
+		<wb-resource deploy-path="/" source-path="/WebContent"
+			tag="defaultRootSource" />
+		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src" />
+		<property name="java-output-path" value="/Spring-Hibernate/build/classes" />
+		<property name="context-root" value="CoRe" />
+	</wb-module>
 </project-modules>
